test/lambda/negative/semantic/start_mutable_capture.ls
pn main() {
    var value = 1
    pn child() {
        print(value)
    }
    start child()
}
